# face-parsing-toolbox

./: README.md  pyproject.toml
face_parsing_toolbox/: face_parsing_toolbox.py
